@@ -1,0 +1,2 @@
+This package contains an interface to use kipi-plugins from
+a KDE application
