@@ -1,0 +1,10 @@
+PRGNAM="libkipi"
+VERSION="16.04.2"
+HOMEPAGE="https://www.kde.org/applications/graphics/"
+DOWNLOAD="http://download.kde.org/stable/applications/16.04.2/src/libkipi-16.04.2.tar.xz"
+MD5SUM="42b949a6d7b1eb9e884e23db314da181"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES="kxmlgui"
+MAINTAINER="Willy Sudiarto Raharjo"
+EMAIL="willysr@slackbuilds.org"
