@@ -1,3 +1,7 @@
+Thu Jul  7 06:32:35 WIB 2016
+libkipi: Added
+  This is needed to build digikam5's kipi plugin
++--------------------------+
 Wed Jul  6 18:09:29 WIB 2016
 framework5: Added
   This is a testing playground for Framework 5 to build digiKam 5
